Added some basic tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,11 @@ include(MakeTarget)
 # Add subdirectories.
 ################################################################################
 
+add_subdirectory(buildtools)
 add_subdirectory(modules)
 if (BUILD_EXAMPLES)
     #add_subdirectory(examples)
 endif()
 if (BUILD_TESTS)
-    #add_subdirectory(tests)
+    add_subdirectory(tests)
 endif()
