--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(sol-generated)
 add_subdirectory(sol-memory)
 add_subdirectory(sol-mesh)
 add_subdirectory(sol-texture)
+add_subdirectory(sol-window)
