--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(sol-generated)
 add_subdirectory(sol-material)
 add_subdirectory(sol-memory)
 add_subdirectory(sol-mesh)
+add_subdirectory(sol-scenegraph)
 add_subdirectory(sol-texture)
 add_subdirectory(sol-window)
