Some small fixes.

--- a/modules/sol-error/CMakeLists.txt
+++ b/modules/sol-error/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SRC_DIR "src")
 
 set(HEADERS
     ${INCLUDE_DIR}/fwd.h
-    ${INCLUDE_DIR}/settings_validation_error
+    ${INCLUDE_DIR}/settings_validation_error.h
     ${INCLUDE_DIR}/sol_error.h
     ${INCLUDE_DIR}/vulkan_error.h
     ${INCLUDE_DIR}/vulkan_error_handler.h
