--- a/modules/sol-scenegraph/CMakeLists.txt
+++ b/modules/sol-scenegraph/CMakeLists.txt
@@ -7,6 +7,9 @@ set(HEADERS
     ${INCLUDE_DIR}/fwd.h
     ${INCLUDE_DIR}/node.h
     ${INCLUDE_DIR}/scenegraph.h
+
+    ${INCLUDE_DIR}/compute/compute_material_node.h
+    ${INCLUDE_DIR}/compute/dispatch_node.h
     
     ${INCLUDE_DIR}/deferred/deferred_material_node.h
     
@@ -19,7 +22,10 @@ set(HEADERS
 set(SOURCES
     ${SRC_DIR}/node.cpp
     ${SRC_DIR}/scenegraph.cpp
-    
+
+    ${SRC_DIR}/compute/compute_material_node.cpp
+    ${SRC_DIR}/compute/dispatch_node.cpp
+
     ${SRC_DIR}/deferred/deferred_material_node.cpp
     
     ${SRC_DIR}/drawable/mesh_node.cpp
