--- a/modules/sol-scenegraph/CMakeLists.txt
+++ b/modules/sol-scenegraph/CMakeLists.txt
@@ -17,6 +17,9 @@ set(HEADERS
     
     ${INCLUDE_DIR}/forward/forward_material_node.h
     ${INCLUDE_DIR}/forward/forward_push_constant_node.h
+
+    ${INCLUDE_DIR}/ray_tracing/ray_tracing_material_node.h
+    ${INCLUDE_DIR}/ray_tracing/trace_rays_node.h
 )
 
 set(SOURCES
@@ -32,6 +35,9 @@ set(SOURCES
     
     ${SRC_DIR}/forward/forward_material_node.cpp
     ${SRC_DIR}/forward/forward_push_constant_node.cpp
+
+    ${SRC_DIR}/ray_tracing/ray_tracing_material_node.cpp
+    ${SRC_DIR}/ray_tracing/trace_rays_node.cpp
 )
 
 set(DEPS_PUBLIC
