Added ray tracing render classes.

--- a/modules/sol-render/CMakeLists.txt
+++ b/modules/sol-render/CMakeLists.txt
@@ -23,6 +23,13 @@ set(HEADERS
     ${INCLUDE_DIR}/forward/forward_renderer.h
     ${INCLUDE_DIR}/forward/forward_traverser.h
     ${INCLUDE_DIR}/forward/fwd.h
+
+    ${INCLUDE_DIR}/ray_tracing/ray_tracing_material_manager.h
+    ${INCLUDE_DIR}/ray_tracing/ray_tracing_pipeline_cache.h
+    ${INCLUDE_DIR}/ray_tracing/ray_tracing_render_data.h
+    ${INCLUDE_DIR}/ray_tracing/ray_tracing_renderer.h
+    ${INCLUDE_DIR}/ray_tracing/ray_tracing_traverser.h
+    ${INCLUDE_DIR}/ray_tracing/fwd.h
 )
 
 set(SOURCES
@@ -39,6 +46,12 @@ set(SOURCES
     ${SRC_DIR}/forward/forward_render_data.cpp
     ${SRC_DIR}/forward/forward_renderer.cpp
     ${SRC_DIR}/forward/forward_traverser.cpp
+
+    ${SRC_DIR}/ray_tracing/ray_tracing_material_manager.cpp
+    ${SRC_DIR}/ray_tracing/ray_tracing_pipeline_cache.cpp
+    ${SRC_DIR}/ray_tracing/ray_tracing_render_data.cpp
+    ${SRC_DIR}/ray_tracing/ray_tracing_renderer.cpp
+    ${SRC_DIR}/ray_tracing/ray_tracing_traverser.cpp
 )
 
 set(DEPS_PUBLIC
