--- a/modules/sol-render/CMakeLists.txt
+++ b/modules/sol-render/CMakeLists.txt
@@ -20,6 +20,7 @@ set(HEADERS
     ${INCLUDE_DIR}/deferred/deferred_renderer.h
     
     ${INCLUDE_DIR}/forward/forward_material_manager.h
+    ${INCLUDE_DIR}/forward/forward_pipeline_cache.h
     ${INCLUDE_DIR}/forward/forward_render_data.h
     ${INCLUDE_DIR}/forward/forward_renderer.h
     ${INCLUDE_DIR}/forward/forward_traverser.h
@@ -45,6 +46,7 @@ set(SOURCES
     ${SRC_DIR}/compute/compute_traverser.cpp
 
     ${SRC_DIR}/forward/forward_material_manager.cpp
+    ${SRC_DIR}/forward/forward_pipeline_cache.cpp
     ${SRC_DIR}/forward/forward_render_data.cpp
     ${SRC_DIR}/forward/forward_renderer.cpp
     ${SRC_DIR}/forward/forward_traverser.cpp
