--- a/modules/sol-error/CMakeLists.txt
+++ b/modules/sol-error/CMakeLists.txt
@@ -45,7 +45,7 @@ make_target(
     NAME ${NAME}
     TYPE ${TYPE}
     VERSION ${SOL_VERSION}
-    #WARNINGS WERROR
+    WARNINGS WERROR
     HEADERS "${HEADERS}"
     SOURCES "${SOURCES}"
     DEPS_PUBLIC "${DEPS_PUBLIC}"
