--- a/modules/sol-memory/CMakeLists.txt
+++ b/modules/sol-memory/CMakeLists.txt
@@ -29,7 +29,7 @@ make_target(
     NAME ${NAME}
     TYPE ${TYPE}
     VERSION ${SOL_VERSION}
-    #WARNINGS WERROR
+    WARNINGS WERROR
     HEADERS "${HEADERS}"
     SOURCES "${SOURCES}"
     DEPS_PUBLIC "${DEPS_PUBLIC}"
