Renamed and moved all files from forward to graphics.

--- a/modules/sol-render/CMakeLists.txt
+++ b/modules/sol-render/CMakeLists.txt
@@ -19,12 +19,12 @@ set(HEADERS
 
     ${INCLUDE_DIR}/deferred/deferred_renderer.h
     
-    ${INCLUDE_DIR}/forward/forward_material_manager.h
-    ${INCLUDE_DIR}/forward/forward_pipeline_cache.h
-    ${INCLUDE_DIR}/forward/forward_render_data.h
-    ${INCLUDE_DIR}/forward/forward_renderer.h
-    ${INCLUDE_DIR}/forward/forward_traverser.h
-    ${INCLUDE_DIR}/forward/fwd.h
+    ${INCLUDE_DIR}/graphics/graphics_material_manager.h
+    ${INCLUDE_DIR}/graphics/graphics_pipeline_cache.h
+    ${INCLUDE_DIR}/graphics/graphics_render_data.h
+    ${INCLUDE_DIR}/graphics/graphics_renderer.h
+    ${INCLUDE_DIR}/graphics/graphics_traverser.h
+    ${INCLUDE_DIR}/graphics/fwd.h
 
     ${INCLUDE_DIR}/ray_tracing/ray_tracing_material_manager.h
     ${INCLUDE_DIR}/ray_tracing/ray_tracing_pipeline_cache.h
@@ -45,11 +45,11 @@ set(SOURCES
     ${SRC_DIR}/compute/compute_renderer.cpp
     ${SRC_DIR}/compute/compute_traverser.cpp
 
-    ${SRC_DIR}/forward/forward_material_manager.cpp
-    ${SRC_DIR}/forward/forward_pipeline_cache.cpp
-    ${SRC_DIR}/forward/forward_render_data.cpp
-    ${SRC_DIR}/forward/forward_renderer.cpp
-    ${SRC_DIR}/forward/forward_traverser.cpp
+    ${SRC_DIR}/graphics/graphics_material_manager.cpp
+    ${SRC_DIR}/graphics/graphics_pipeline_cache.cpp
+    ${SRC_DIR}/graphics/graphics_render_data.cpp
+    ${SRC_DIR}/graphics/graphics_renderer.cpp
+    ${SRC_DIR}/graphics/graphics_traverser.cpp
 
     ${SRC_DIR}/ray_tracing/ray_tracing_material_manager.cpp
     ${SRC_DIR}/ray_tracing/ray_tracing_pipeline_cache.cpp
