--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(sol-render)
 add_subdirectory(sol-scenegraph)
 add_subdirectory(sol-texture)
 add_subdirectory(sol-window)
+add_subdirectory(spirv-reflect)
