--- a/modules/sol-render/CMakeLists.txt
+++ b/modules/sol-render/CMakeLists.txt
@@ -8,7 +8,6 @@ set(HEADERS
     
     ${INCLUDE_DIR}/common/descriptors.h
     ${INCLUDE_DIR}/common/i_traverser.h
-    ${INCLUDE_DIR}/common/render_settings.h
     ${INCLUDE_DIR}/common/uniform_buffer.h
     ${INCLUDE_DIR}/common/uniform_buffer_manager.h
     
@@ -23,6 +22,7 @@ set(HEADERS
     ${INCLUDE_DIR}/graphics/graphics_pipeline_cache.h
     ${INCLUDE_DIR}/graphics/graphics_render_data.h
     ${INCLUDE_DIR}/graphics/graphics_renderer.h
+    ${INCLUDE_DIR}/graphics/graphics_rendering_info.h
     ${INCLUDE_DIR}/graphics/graphics_traverser.h
     ${INCLUDE_DIR}/graphics/fwd.h
 
@@ -37,7 +37,6 @@ set(HEADERS
 set(SOURCES
     ${SRC_DIR}/common/descriptors.cpp
     ${SRC_DIR}/common/i_traverser.cpp
-    ${SRC_DIR}/common/render_settings.cpp
     ${SRC_DIR}/common/uniform_buffer.cpp
     ${SRC_DIR}/common/uniform_buffer_manager.cpp
     
@@ -51,6 +50,7 @@ set(SOURCES
     ${SRC_DIR}/graphics/graphics_pipeline_cache.cpp
     ${SRC_DIR}/graphics/graphics_render_data.cpp
     ${SRC_DIR}/graphics/graphics_renderer.cpp
+    ${SRC_DIR}/graphics/graphics_rendering_info.cpp
     ${SRC_DIR}/graphics/graphics_traverser.cpp
 
     ${SRC_DIR}/ray_tracing/ray_tracing_material_manager.cpp
