Added sol-task module, next evolution of the sol-command module.

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(sol-memory)
 add_subdirectory(sol-mesh)
 add_subdirectory(sol-render)
 add_subdirectory(sol-scenegraph)
+add_subdirectory(sol-task)
 add_subdirectory(sol-texture)
 add_subdirectory(sol-window)
 add_subdirectory(spirv-reflect)
