Introduced IBuffer and IBufferAllocator classes and made MemoryManager and MemoryPools implement their interfaces.

--- a/modules/sol-memory/CMakeLists.txt
+++ b/modules/sol-memory/CMakeLists.txt
@@ -7,6 +7,9 @@ set(SRC_DIR "src")
 
 set(HEADERS
     ${INCLUDE_DIR}/fwd.h
+    ${INCLUDE_DIR}/buffer.h
+    ${INCLUDE_DIR}/i_buffer.h
+    ${INCLUDE_DIR}/i_buffer_allocator.h
     ${INCLUDE_DIR}/memory_manager.h
 
     ${INCLUDE_DIR}/pool/free_at_once_memory_pool.h
@@ -18,6 +21,9 @@ set(HEADERS
 )
 
 set(SOURCES
+    ${SRC_DIR}/buffer.cpp
+    ${SRC_DIR}/i_buffer.cpp
+    ${SRC_DIR}/i_buffer_allocator.cpp
     ${SRC_DIR}/memory_manager.cpp
 
     ${SRC_DIR}/pool/free_at_once_memory_pool.cpp
