--- a/tests/sol-memory-test/CMakeLists.txt
+++ b/tests/sol-memory-test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRC_DIR "src")
 
 set(HEADERS
     ${INCLUDE_DIR}/free_at_once_memory_pool.h
+    ${INCLUDE_DIR}/i_memory_pool.h
     ${INCLUDE_DIR}/non_linear_memory_pool.h
     ${INCLUDE_DIR}/ring_buffer_memory_pool.h
     ${INCLUDE_DIR}/stack_memory_pool.h
@@ -15,6 +16,7 @@ set(HEADERS
 set(SOURCES
     ${SRC_DIR}/main.cpp
     ${SRC_DIR}/free_at_once_memory_pool.cpp
+    ${SRC_DIR}/i_memory_pool.cpp
     ${SRC_DIR}/non_linear_memory_pool.cpp
     ${SRC_DIR}/ring_buffer_memory_pool.cpp
     ${SRC_DIR}/stack_memory_pool.cpp
