--- a/tests/sol-memory-test/CMakeLists.txt
+++ b/tests/sol-memory-test/CMakeLists.txt
@@ -6,11 +6,11 @@ set(INCLUDE_DIR "include/sol-memory-test")
 set(SRC_DIR "src")
 
 set(HEADERS
-    ${INCLUDE_DIR}/free_at_once_memory_pool.h
-    ${INCLUDE_DIR}/i_memory_pool.h
-    ${INCLUDE_DIR}/non_linear_memory_pool.h
-    ${INCLUDE_DIR}/ring_buffer_memory_pool.h
-    ${INCLUDE_DIR}/stack_memory_pool.h
+    ${INCLUDE_DIR}/pool/free_at_once_memory_pool.h
+    ${INCLUDE_DIR}/pool/i_memory_pool.h
+    ${INCLUDE_DIR}/pool/non_linear_memory_pool.h
+    ${INCLUDE_DIR}/pool/ring_buffer_memory_pool.h
+    ${INCLUDE_DIR}/pool/stack_memory_pool.h
 
     ${INCLUDE_DIR}/transfer_manager/concurrent_buffer_transactions.h
     ${INCLUDE_DIR}/transfer_manager/manual_copy_barrier.h
@@ -20,11 +20,12 @@ set(HEADERS
 
 set(SOURCES
     ${SRC_DIR}/main.cpp
-    ${SRC_DIR}/free_at_once_memory_pool.cpp
-    ${SRC_DIR}/i_memory_pool.cpp
-    ${SRC_DIR}/non_linear_memory_pool.cpp
-    ${SRC_DIR}/ring_buffer_memory_pool.cpp
-    ${SRC_DIR}/stack_memory_pool.cpp
+
+    ${SRC_DIR}/pool/free_at_once_memory_pool.cpp
+    ${SRC_DIR}/pool/i_memory_pool.cpp
+    ${SRC_DIR}/pool/non_linear_memory_pool.cpp
+    ${SRC_DIR}/pool/ring_buffer_memory_pool.cpp
+    ${SRC_DIR}/pool/stack_memory_pool.cpp
 
     ${SRC_DIR}/transfer_manager/concurrent_buffer_transactions.cpp
     ${SRC_DIR}/transfer_manager/manual_copy_barrier.cpp
