Fixed some nasty bugs, added additional tests and some missing features for buffer transactions.

--- a/tests/sol-memory-test/CMakeLists.txt
+++ b/tests/sol-memory-test/CMakeLists.txt
@@ -13,6 +13,7 @@ set(HEADERS
     ${INCLUDE_DIR}/pool/stack_memory_pool.h
 
     ${INCLUDE_DIR}/transfer_manager/concurrent_buffer_transactions.h
+    ${INCLUDE_DIR}/transfer_manager/large_copy.h
     ${INCLUDE_DIR}/transfer_manager/manual_copy_barrier.h
     ${INCLUDE_DIR}/transfer_manager/multiple_copies.h
     ${INCLUDE_DIR}/transfer_manager/partial_copy.h
@@ -28,6 +29,7 @@ set(SOURCES
     ${SRC_DIR}/pool/stack_memory_pool.cpp
 
     ${SRC_DIR}/transfer_manager/concurrent_buffer_transactions.cpp
+    ${SRC_DIR}/transfer_manager/large_copy.cpp
     ${SRC_DIR}/transfer_manager/manual_copy_barrier.cpp
     ${SRC_DIR}/transfer_manager/multiple_copies.cpp
     ${SRC_DIR}/transfer_manager/partial_copy.cpp
