Started work on copy commands involving images.

--- a/tests/sol-texture-test/CMakeLists.txt
+++ b/tests/sol-texture-test/CMakeLists.txt
@@ -6,11 +6,19 @@ set(INCLUDE_DIR "include/sol-texture-test")
 set(SRC_DIR "src")
 
 set(HEADERS
+    ${INCLUDE_DIR}/image/image2d.h
+    ${INCLUDE_DIR}/image/image2d_barriers.h
+    ${INCLUDE_DIR}/image/image2d_data.h
+
     ${INCLUDE_DIR}/sampler/sampler2d.h
 )
 
 set(SOURCES
     ${SRC_DIR}/main.cpp
+
+    ${SRC_DIR}/image/image2d.cpp
+    ${SRC_DIR}/image/image2d_barriers.cpp
+    ${SRC_DIR}/image/image2d_data.cpp
 
     ${SRC_DIR}/sampler/sampler2d.cpp
 )
