Added sol-descriptor library, with classes for handling descriptor buffers, layouts and updates.

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(sol-command)
 add_subdirectory(sol-core)
 add_subdirectory(sol-error)
+add_subdirectory(sol-descriptor)
 add_subdirectory(sol-generated)
 add_subdirectory(sol-material)
 add_subdirectory(sol-memory)
