Started rework of scenegraph for new mesh and material classes.

--- a/modules/sol-scenegraph/CMakeLists.txt
+++ b/modules/sol-scenegraph/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(stduuid REQUIRED)
+
 set(NAME sol-scenegraph)
 set(TYPE module)
 set(INCLUDE_DIR "include/sol-scenegraph")
@@ -8,37 +10,41 @@ set(HEADERS
     ${INCLUDE_DIR}/node.h
     ${INCLUDE_DIR}/scenegraph.h
 
-    ${INCLUDE_DIR}/compute/compute_material_node.h
-    ${INCLUDE_DIR}/compute/dispatch_node.h
+    #${INCLUDE_DIR}/compute/compute_material_node.h
+    #${INCLUDE_DIR}/compute/dispatch_node.h
 
     ${INCLUDE_DIR}/drawable/mesh_node.h
     
+    ${INCLUDE_DIR}/graphics/graphics_dynamic_state_node.h
     ${INCLUDE_DIR}/graphics/graphics_material_node.h
     ${INCLUDE_DIR}/graphics/graphics_push_constant_node.h
 
-    ${INCLUDE_DIR}/ray_tracing/ray_tracing_material_node.h
-    ${INCLUDE_DIR}/ray_tracing/trace_rays_node.h
+    #${INCLUDE_DIR}/ray_tracing/ray_tracing_material_node.h
+    #${INCLUDE_DIR}/ray_tracing/trace_rays_node.h
 )
 
 set(SOURCES
     ${SRC_DIR}/node.cpp
     ${SRC_DIR}/scenegraph.cpp
 
-    ${SRC_DIR}/compute/compute_material_node.cpp
-    ${SRC_DIR}/compute/dispatch_node.cpp
+    #${SRC_DIR}/compute/compute_material_node.cpp
+    #${SRC_DIR}/compute/dispatch_node.cpp
 
     ${SRC_DIR}/drawable/mesh_node.cpp
     
+    ${SRC_DIR}/graphics/graphics_dynamic_state_node.cpp
     ${SRC_DIR}/graphics/graphics_material_node.cpp
     ${SRC_DIR}/graphics/graphics_push_constant_node.cpp
 
-    ${SRC_DIR}/ray_tracing/ray_tracing_material_node.cpp
-    ${SRC_DIR}/ray_tracing/trace_rays_node.cpp
+    #${SRC_DIR}/ray_tracing/ray_tracing_material_node.cpp
+    #${SRC_DIR}/ray_tracing/trace_rays_node.cpp
 )
 
 set(DEPS_PUBLIC
     sol-core
     sol-material
+
+    stduuid::stduuid
 )
 
 set(DEPS_PRIVATE
