Added a much more dynamic way for casting nodes.

--- a/modules/sol-render/CMakeLists.txt
+++ b/modules/sol-render/CMakeLists.txt
@@ -11,12 +11,12 @@ set(HEADERS
     ${INCLUDE_DIR}/common/uniform_buffer.h
     ${INCLUDE_DIR}/common/uniform_buffer_manager.h
     
-    ${INCLUDE_DIR}/compute/compute_material_manager.h
-    ${INCLUDE_DIR}/compute/compute_pipeline_cache.h
-    ${INCLUDE_DIR}/compute/compute_render_data.h
-    ${INCLUDE_DIR}/compute/compute_renderer.h
-    ${INCLUDE_DIR}/compute/compute_traverser.h
-    ${INCLUDE_DIR}/compute/fwd.h
+    #${INCLUDE_DIR}/compute/compute_material_manager.h
+    #${INCLUDE_DIR}/compute/compute_pipeline_cache.h
+    #${INCLUDE_DIR}/compute/compute_render_data.h
+    #${INCLUDE_DIR}/compute/compute_renderer.h
+    #${INCLUDE_DIR}/compute/compute_traverser.h
+    #${INCLUDE_DIR}/compute/fwd.h
 
     ${INCLUDE_DIR}/graphics/graphics_material_manager.h
     ${INCLUDE_DIR}/graphics/graphics_pipeline_cache.h
@@ -26,12 +26,12 @@ set(HEADERS
     ${INCLUDE_DIR}/graphics/graphics_traverser.h
     ${INCLUDE_DIR}/graphics/fwd.h
 
-    ${INCLUDE_DIR}/ray_tracing/ray_tracing_material_manager.h
-    ${INCLUDE_DIR}/ray_tracing/ray_tracing_pipeline_cache.h
-    ${INCLUDE_DIR}/ray_tracing/ray_tracing_render_data.h
-    ${INCLUDE_DIR}/ray_tracing/ray_tracing_renderer.h
-    ${INCLUDE_DIR}/ray_tracing/ray_tracing_traverser.h
-    ${INCLUDE_DIR}/ray_tracing/fwd.h
+    #${INCLUDE_DIR}/ray_tracing/ray_tracing_material_manager.h
+    #${INCLUDE_DIR}/ray_tracing/ray_tracing_pipeline_cache.h
+    #${INCLUDE_DIR}/ray_tracing/ray_tracing_render_data.h
+    #${INCLUDE_DIR}/ray_tracing/ray_tracing_renderer.h
+    #${INCLUDE_DIR}/ray_tracing/ray_tracing_traverser.h
+    #${INCLUDE_DIR}/ray_tracing/fwd.h
 )
 
 set(SOURCES
@@ -40,11 +40,11 @@ set(SOURCES
     ${SRC_DIR}/common/uniform_buffer.cpp
     ${SRC_DIR}/common/uniform_buffer_manager.cpp
     
-    ${SRC_DIR}/compute/compute_material_manager.cpp
-    ${SRC_DIR}/compute/compute_pipeline_cache.cpp
-    ${SRC_DIR}/compute/compute_render_data.cpp
-    ${SRC_DIR}/compute/compute_renderer.cpp
-    ${SRC_DIR}/compute/compute_traverser.cpp
+    #${SRC_DIR}/compute/compute_material_manager.cpp
+    #${SRC_DIR}/compute/compute_pipeline_cache.cpp
+    #${SRC_DIR}/compute/compute_render_data.cpp
+    #${SRC_DIR}/compute/compute_renderer.cpp
+    #${SRC_DIR}/compute/compute_traverser.cpp
 
     ${SRC_DIR}/graphics/graphics_material_manager.cpp
     ${SRC_DIR}/graphics/graphics_pipeline_cache.cpp
@@ -53,18 +53,20 @@ set(SOURCES
     ${SRC_DIR}/graphics/graphics_rendering_info.cpp
     ${SRC_DIR}/graphics/graphics_traverser.cpp
 
-    ${SRC_DIR}/ray_tracing/ray_tracing_material_manager.cpp
-    ${SRC_DIR}/ray_tracing/ray_tracing_pipeline_cache.cpp
-    ${SRC_DIR}/ray_tracing/ray_tracing_render_data.cpp
-    ${SRC_DIR}/ray_tracing/ray_tracing_renderer.cpp
-    ${SRC_DIR}/ray_tracing/ray_tracing_traverser.cpp
+    #${SRC_DIR}/ray_tracing/ray_tracing_material_manager.cpp
+    #${SRC_DIR}/ray_tracing/ray_tracing_pipeline_cache.cpp
+    #${SRC_DIR}/ray_tracing/ray_tracing_render_data.cpp
+    #${SRC_DIR}/ray_tracing/ray_tracing_renderer.cpp
+    #${SRC_DIR}/ray_tracing/ray_tracing_traverser.cpp
 )
 
 set(DEPS_PUBLIC
     sol-core
+    sol-descriptor
     sol-material
     sol-mesh
     sol-scenegraph
+    sol-texture
 )
 
 set(DEPS_PRIVATE
