--- a/modules/sol-render/CMakeLists.txt
+++ b/modules/sol-render/CMakeLists.txt
@@ -6,10 +6,10 @@ set(SRC_DIR "src")
 set(HEADERS
     ${INCLUDE_DIR}/fwd.h
     
-    ${INCLUDE_DIR}/common/descriptors.h
-    ${INCLUDE_DIR}/common/i_traverser.h
-    ${INCLUDE_DIR}/common/uniform_buffer.h
-    ${INCLUDE_DIR}/common/uniform_buffer_manager.h
+    #${INCLUDE_DIR}/common/descriptors.h
+    #${INCLUDE_DIR}/common/i_traverser.h
+    #${INCLUDE_DIR}/common/uniform_buffer.h
+    #${INCLUDE_DIR}/common/uniform_buffer_manager.h
     
     #${INCLUDE_DIR}/compute/compute_material_manager.h
     #${INCLUDE_DIR}/compute/compute_pipeline_cache.h
@@ -18,13 +18,13 @@ set(HEADERS
     #${INCLUDE_DIR}/compute/compute_traverser.h
     #${INCLUDE_DIR}/compute/fwd.h
 
-    ${INCLUDE_DIR}/graphics/graphics_material_manager.h
-    ${INCLUDE_DIR}/graphics/graphics_pipeline_cache.h
+    #${INCLUDE_DIR}/graphics/graphics_material_manager.h
+    #${INCLUDE_DIR}/graphics/graphics_pipeline_cache.h
     ${INCLUDE_DIR}/graphics/graphics_render_data.h
-    ${INCLUDE_DIR}/graphics/graphics_renderer.h
-    ${INCLUDE_DIR}/graphics/graphics_rendering_info.h
+    #${INCLUDE_DIR}/graphics/graphics_renderer.h
+    #${INCLUDE_DIR}/graphics/graphics_rendering_info.h
     ${INCLUDE_DIR}/graphics/graphics_traverser.h
-    ${INCLUDE_DIR}/graphics/fwd.h
+    #${INCLUDE_DIR}/graphics/fwd.h
 
     #${INCLUDE_DIR}/ray_tracing/ray_tracing_material_manager.h
     #${INCLUDE_DIR}/ray_tracing/ray_tracing_pipeline_cache.h
@@ -35,10 +35,10 @@ set(HEADERS
 )
 
 set(SOURCES
-    ${SRC_DIR}/common/descriptors.cpp
-    ${SRC_DIR}/common/i_traverser.cpp
-    ${SRC_DIR}/common/uniform_buffer.cpp
-    ${SRC_DIR}/common/uniform_buffer_manager.cpp
+    #${SRC_DIR}/common/descriptors.cpp
+    #${SRC_DIR}/common/i_traverser.cpp
+    #${SRC_DIR}/common/uniform_buffer.cpp
+    #${SRC_DIR}/common/uniform_buffer_manager.cpp
     
     #${SRC_DIR}/compute/compute_material_manager.cpp
     #${SRC_DIR}/compute/compute_pipeline_cache.cpp
@@ -46,11 +46,11 @@ set(SOURCES
     #${SRC_DIR}/compute/compute_renderer.cpp
     #${SRC_DIR}/compute/compute_traverser.cpp
 
-    ${SRC_DIR}/graphics/graphics_material_manager.cpp
-    ${SRC_DIR}/graphics/graphics_pipeline_cache.cpp
+    #${SRC_DIR}/graphics/graphics_material_manager.cpp
+    #${SRC_DIR}/graphics/graphics_pipeline_cache.cpp
     ${SRC_DIR}/graphics/graphics_render_data.cpp
-    ${SRC_DIR}/graphics/graphics_renderer.cpp
-    ${SRC_DIR}/graphics/graphics_rendering_info.cpp
+    #${SRC_DIR}/graphics/graphics_renderer.cpp
+    #${SRC_DIR}/graphics/graphics_rendering_info.cpp
     ${SRC_DIR}/graphics/graphics_traverser.cpp
 
     #${SRC_DIR}/ray_tracing/ray_tracing_material_manager.cpp
